--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
+    "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7"
